Dialogo operación exitosa

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,4 +59,7 @@
     <string name="metodo_pago">Método de pago</string>
     <string name="efectivo">Efectivo</string>
     <string name="con_tarjeta">Con Tarjeta</string>
+    <string name="continue_msg">Continuar</string>
+    <string name="orden_creada">Orden creada con exito</string>
+    <string name="revisar_historial">Puede revisarla en cualquier momento en su historial</string>
 </resources>
